<resources>
    <string name="app_name">Wizard Toe</string>

    <string name="preference_file_key">-???-</string>

    <string name="dialog_continue_game">Пподолжить</string>
    <string name="dialog_exit">Выйти</string>
    <string name="dialog_settings">Настройки</string>
    <string name="dialog_status_draw">Ничья</string>
    <string name="dialog_status_lose">Поражение</string>
    <string name="dialog_status_win">Победа</string>

    <string name="popup_title">Меню</string>
    <string name="popup_close">Ок</string>

    <string name="rules_diagonal">Диагональный ряд</string>
    <string name="rules_horizontal">Горизонтальный ряд</string>
    <string name="rules_vertical">Вертикальный ряд</string>

    <string name="settings_title">Настройки</string>
    <string name="settings_difficulty">Сложность</string>
    <string name="settings_rules">Правила</string>
    <string name="settings_sound">Звук</string>
    <string name="settings_reverce">Вернуться</string>

    <string name="main_manu_continue_game">Продолжить</string>
    <string name="main_manu_new_game">Новая игра</string>

    <string-array name="level">
        <item>Легко</item>
        <item>Нормально</item>
        <item>Сложно</item>
    </string-array>
</resources>