<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/settings_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_reverce" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/settings_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_title_sound"
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_sound" />

                <SeekBar
                    android:id="@+id/settings__sound_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="30"
                    android:progressDrawable="@drawable/style_seekbar"
                    android:splitTrack="false"
                    android:thumb="@drawable/style_thumb" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_title_difficulty"
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_difficulty" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/prev_lvl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        app:srcCompat="@drawable/ic_prev" />

                    <TextView
                        android:id="@+id/settings_difficulty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="TextView"
                        android:textAlignment="center" />

                    <ImageView
                        android:id="@+id/next_lvl"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"

                        app:srcCompat="@drawable/ic_next" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/settings_title_rules"
                    style="@style/Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_rules" />

                <CheckBox
                    android:id="@+id/checkBoxHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/style_checkbox"
                    android:text="@string/rules_horizontal" />

                <CheckBox
                    android:id="@+id/checkBoxVertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/style_checkbox"
                    android:text="@string/rules_vertical" />

                <CheckBox
                    android:id="@+id/checkBoxDiagonal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/style_checkbox"
                    android:text="@string/rules_diagonal" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>